fixed min height not being correctly and causing scrollbar

--- a/style/mainframe_responsive.css
+++ b/style/mainframe_responsive.css
@@ -1,6 +1,6 @@
 @media (max-width: 1300px) {
     .main-content {
-        min-height: 100vh;
+        min-height: calc(100vh - 96px)
     }
 }
 
